Update index.html with new content and styles

--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Example</title>
+  <meta charset="utf-8" />
+  <title>Jonathan Geva – jg.is-a.dev</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <style>
+    body { font-family: system-ui, -apple-system, sans-serif; margin: 0; padding: 2rem; max-width: 720px; }
+    h1 { font-size: 2.5rem; margin-bottom: 0.25rem; }
+    h2 { margin-top: 2rem; }
+    a { text-decoration: none; }
+    .tag { display: inline-block; padding: 0.15rem 0.6rem; border-radius: 999px; font-size: 0.8rem; border: 1px solid #ddd; margin-right: 0.4rem; }
+  </style>
 </head>
 <body>
-  <h1>This is a heading 🥀✌️</h1>
-  <p>This is a paragraph.</p>
+  <h1>Jonathan Geva</h1>
+  <p>Apprentice Application Developer @ Swisscom</p>
+
+  <div>
+    <span class="tag">Web</span>
+    <span class="tag">Automation</span>
+    <span class="tag">AI</span>
+  </div>
+
+  <h2>About</h2>
+  <p>
+    I build small tools, automations and web apps – mostly for learning, fun, and to make boring tasks disappear.
+  </p>
+
+  <h2>Projects</h2>
+  <ul>
+    <li>Portfolio: <a href="https://jonathangeva.ch" target="_blank">jonathangeva.ch</a></li>
+    <li>GitHub: <a href="https://github.com/jonathan-geva" target="_blank">github.com/jonathan-geva</a></li>
+  </ul>
+
+  <h2>Contact</h2>
+  <p>
+    Best way to reach me: <a href="mailto:dev@jonathangeva.ch">dev@jonathangeva.ch</a>
+  </p>
 </body>
 </html>
