Fix title and protocol references from "FRAU FAO" to "FRAU DAO" in index.html

--- a/dao/index.html
+++ b/dao/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FRAU FAO // LAUNCH SEQUENCE</title>
+    <title>FRAU DAO // LAUNCH SEQUENCE</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;700&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -178,8 +178,8 @@
             <h2 class="text-neon-cyan tracking-[0.5em] text-sm md:text-lg mb-2 opacity-80 font-bold animate-pulse">
                 SYSTEM STATUS: <span class="text-white">ARMED</span>
             </h2>
-            <h1 class="glitch-text text-5xl md:text-8xl font-black text-white leading-tight mb-2" data-text="FRAU FAO">
-                FRAU FAO
+            <h1 class="glitch-text text-5xl md:text-8xl font-black text-white leading-tight mb-2" data-text="FRAU DAO">
+                FRAU DAO
             </h1>
             <h2 class="text-3xl md:text-5xl font-bold tracking-widest text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-pink-500 transform skew-x-[-10deg]">
                 TEST RELEASE
@@ -333,7 +333,7 @@
             "ESTABLISHING SECURE LINK...",
             "BYPASSING FIREWALLS...",
             "OPTIMIZING ASSETS...",
-            "FRAU FAO PROTOCOL ACTIVE"
+            "FRAU DAO PROTOCOL ACTIVE"
         ];
         let phraseIndex = 0;
 
