Modify index.html for placeholder content
Updated content to reflect a placeholder site.

--- a/index.html
+++ b/index.html
@@ -18,21 +18,14 @@
 
   <div>
     <span class="tag">Web</span>
-    <span class="tag">Automation</span>
+    <span class="tag">Self-hosting</span>
     <span class="tag">AI</span>
   </div>
 
   <h2>About</h2>
   <p>
-    I build small tools, automations and web apps – mostly for learning, fun, and to make boring tasks disappear.
+    Placeholder site.
   </p>
-
-  <h2>Projects</h2>
-  <ul>
-    <li>Portfolio: <a href="https://jonathangeva.ch" target="_blank">jonathangeva.ch</a></li>
-    <li>GitHub: <a href="https://github.com/jonathan-geva" target="_blank">github.com/jonathan-geva</a></li>
-  </ul>
-
   <h2>Contact</h2>
   <p>
     Best way to reach me: <a href="mailto:dev@jonathangeva.ch">dev@jonathangeva.ch</a>
