Rename event from '4 Uhr Bier Uhr' to 'Drüü Uhr Glüü Uhr'

--- a/4uhrbieruhr/index.html
+++ b/4uhrbieruhr/index.html
@@ -428,8 +428,8 @@
     <div class="ripple" id="ripple"></div>
 
     <div class="container" id="container">
-        <h1 class="title">4 Uhr Bier Uhr 🍺</h1>
-        <p class="subtitle">Countdown bis 4 Uhr Bier Uhr • Jeden Freitag um 16:00 Uhr</p>
+        <h1 class="title">Drüü Uhr Glüü Uhr 🍵</h1>
+        <p class="subtitle">Countdown bis Drüü Uhr Glüü Uhr • Jeden Freitag um 16:00 Uhr</p>
 
         <div class="countdown">
             <div class="time-group">
@@ -457,7 +457,7 @@
             <div class="progress-fill" id="progress"></div>
         </div>
 
-        <p class="status" id="status">Bis zur 4 Uhr Bier Uhr</p>
+        <p class="status" id="status">Bis zur Drüü Uhr Glüü Uhr</p>
     </div>
 
     <div class="footer">Zürich Time (Europe/Zurich)</div>
@@ -593,7 +593,7 @@
             createConfetti();
             
             // Update status
-            statusEl.textContent = '🍺🎉 PROST! 4 Uhr Bier Uhr! 🎉🍺';
+            statusEl.textContent = '🍵🎉 PROST! 3 Uhr Glüü Uhr! 🎉🍵';
         }
 
         // End celebration
