Update event title and subtitle for Christmas

--- a/4uhrbieruhr/index.html
+++ b/4uhrbieruhr/index.html
@@ -428,8 +428,8 @@
     <div class="ripple" id="ripple"></div>
 
     <div class="container" id="container">
-        <h1 class="title">Drüü Uhr Glüü Uhr 🍵</h1>
-        <p class="subtitle">Countdown bis Drüü Uhr Glüü Uhr • Jeden Freitag um 16:00 Uhr</p>
+        <h1 class="title">Christmas Event 🧑‍🎄🎄</h1>
+        <p class="subtitle">Countdown bis Christmas Event!!! • Freitag um 16:00 Uhr</p>
 
         <div class="countdown">
             <div class="time-group">
@@ -457,7 +457,7 @@
             <div class="progress-fill" id="progress"></div>
         </div>
 
-        <p class="status" id="status">Bis zur Drüü Uhr Glüü Uhr</p>
+        <p class="status" id="status">Bis zum Christmas Event</p>
     </div>
 
     <div class="footer">Zürich Time (Europe/Zurich)</div>
