--- a/4uhrbieruhr/index.html
+++ b/4uhrbieruhr/index.html
@@ -656,6 +656,17 @@
         // Initialize
         updateCountdown();
         setInterval(updateCountdown, 1000);
+        // Auto-reload on content update
+        setInterval(async () => {
+            try {
+                const response = await fetch(location.href, { cache: 'no-cache' });
+                if (response.status === 200) {
+                    location.reload();
+                }
+            } catch (e) {
+                // Ignore errors (e.g., offline)
+            }
+        }, 30000); // Check every 30 seconds
     </script>
 </body>
 </html>
